<resources>
    <string name="app_name">BookKeeping</string>
    <string name="edit_one">记一笔</string>
    <string name="month_out">本月支出</string>
    <string name="month_in">本月收入</string>
    <string name="budge">预算剩余</string>
    <string name="to_chart">查看图表分析</string>
    <string name="add_remark">添加备注</string>
    <string name="remark">点击输入备注</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="please_input_time">请输入时间(24小时制)</string>
    <string name="edit_budget">设置预算</string>
    <string name="hint_edit_budget">点击设置预算</string>
    <string name="please_input_keyword">请输入关键字</string>
    <string name="data_empty">数据为空，请添加记录</string>
    <string name="about">关于</string>
    <string name="settings">设置</string>
    <string name="history">历史记录</string>
    <string name="info">账单详情</string>
    <string name="about_app_info">应用信息</string>
    <string name="history_info">本月账单记录</string>
    <string name="analysis">图表分析</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_name">分类名称:</string>
    <string name="add_type">添加分类</string>
</resources>