<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@color/grey_C0C0C0">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
                android:id="@+id/dialog_more_btn_about"
                android:drawableTop="@mipmap/it_guanyu"
                style="@style/DialogMoreBtnStyle"
                android:text="@string/about" />
        <Button
                android:id="@+id/dialog_more_btn_settings"
                android:drawableTop="@mipmap/it_shezhi"
                style="@style/DialogMoreBtnStyle"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:text="@string/settings" />
        <Button
                android:id="@+id/dialog_more_btn_history"
                android:drawableTop="@mipmap/it_jilu"
                style="@style/DialogMoreBtnStyle"
                android:text="@string/history" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:weightSum="3">
        <Button
                android:id="@+id/dialog_more_btn_info"
                android:drawableTop="@mipmap/it_xiqing"
                style="@style/DialogMoreBtnStyle"
                android:text="@string/info"
                android:layout_marginRight="30dp"/>
    </LinearLayout>

    <ImageView
            android:id="@+id/dialog_more_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ih_error"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            />

</LinearLayout>