<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_edit_budget_bg">

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:background="@drawable/dialog_edit_budget_bg"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

        <TextView
                android:id="@+id/dialog_budget_tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/add_type"
                android:textSize="18sp"
                android:padding="10dp" />

        <LinearLayout
                android:id="@+id/dialog_budget_ll"
                android:layout_below="@+id/dialog_budget_tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_name"
                    android:textSize="12sp"/>

            <EditText
                    android:id="@+id/dialog_typename_et"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:maxLength="4"
                    android:padding="10dp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dialog_budget_ll"
                android:orientation="horizontal"
                android:paddingTop="10dp">

            <Button
                    android:id="@+id/dialog_newtype_btn_cancel"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:background="@null" />

            <Button
                    android:id="@+id/dialog_newtype_btn_ensure"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/ensure"
                    android:background="@null" />

        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>