<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@color/grey_f3f3f3"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="20dp">

        <TextView
                android:id="@+id/item_mainlv_top_tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month_out" />

        <TextView
                android:id="@+id/item_mainlv_top_tv_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="￥ 0"
                android:layout_below="@+id/item_mainlv_top_tv1"
                android:textSize="26sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black" />

        <ImageView
                android:id="@+id/item_mainlv_top_iv_hide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@mipmap/ih_show"
                android:layout_alignTop="@+id/item_mainlv_top_tv_out"
                android:layout_alignParentRight="true" />

        <TextView
                android:id="@+id/item_mainlv_top_tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month_in"
                android:layout_below="@+id/item_mainlv_top_tv_out" />

        <TextView
                android:id="@+id/item_mainlv_top_tv_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="￥ 0"
                android:layout_below="@id/item_mainlv_top_tv_out"
                android:layout_toRightOf="@id/item_mainlv_top_tv2"
                android:layout_marginLeft="5dp" />

        <TextView
                android:id="@+id/item_mainlv_top_tv_budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="￥ 0"
                android:textColor="@color/black"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignBottom="@id/item_mainlv_top_tv2"
                android:layout_marginLeft="5dp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budge"
                android:layout_toLeftOf="@id/item_mainlv_top_tv_budget"
                android:layout_alignBottom="@id/item_mainlv_top_tv2" />

        <TextView
                android:id="@+id/item_mainlv_top_tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ih_biaoge"
                android:layout_below="@id/item_mainlv_top_tv2"
                android:layout_marginTop="20dp"
                android:text="@string/to_chart"
                android:textColor="@color/green_006400"
                android:drawablePadding="10dp"
                android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <TextView
            android:id="@+id/item_mainlv_top_tv_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="今日支出 ￥0 收入 ￥0"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"/>

</LinearLayout>