<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_f3f3f3"
        android:orientation="vertical"
        tools:context=".HistoryActivity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

        <ImageView
                android:id="@+id/history_iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/it_back"
                android:onClick="onClick"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="18sp"
                android:text="@string/history"
                android:textStyle="bold" />

        <ImageView
                android:id="@+id/history_iv_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:onClick="onClick"
                android:src="@mipmap/it_rili"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp" />
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

        <TextView
                android:id="@+id/history_tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2020年10月" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@color/green_006400"
                android:text="@string/history_info" />
    </RelativeLayout>

    <ListView
            android:id="@+id/history_lv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:dividerHeight="5dp"
            android:padding="10dp"
            android:visibility="gone"/>

    <RelativeLayout
            android:id="@+id/history_tv_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/data_empty"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:drawableTop="@mipmap/it_searchtext"
                android:textSize="22sp"/>
    </RelativeLayout>

</LinearLayout>